Se agrego un h6 para mostrar el nombre de ZZaul Hernandez

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Bienvenido a mi página web</h1>
-      <h6>MI Nombre es Zaul Hernandez</h6>
+      <h6>Hola mi nombre es Zaul Hernadnez</h6>
     <nav>
       <ul>
         <li><a href="#">Inicio</a></li>
